mType/tests/testFiles/cast/error/objectToPrimitiveCast.mt
// Error: Cannot cast object to primitive
class MyClass {}
MyClass obj = new MyClass();
int x = (int)obj;
